k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: demo-app
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.64.34.93.17.sslip.io
    secretName: demo-app-tls
  rules:
  - host: demo.64.34.93.17.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 80
